2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h:
	  Make firstStartThread and exitThread NONRETURNING.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* libraries/javalib/javax/swing/tree/DefaultTreeCellEditor.java:
	  Fix type in javadoc for the EditorContainer method.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* libraries/clib/classpath/jcl.c:
	  In JCL_ThrowException, use fputs instead of fprintf.  Fixes
	  a gcc waring, using a non-constant format string.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* scripts/GCCWarning.pm, scripts/JikesWarning.pm,
	  scripts/LogWarning.pm, scripts/sort-warnings.pl:
	  Add ability to ignore specify warnings.

2004-12-11  Adam Heath  <doogie@brainfood.com>

	* scripts/GCCWarning.pm, scripts/JikesWarning.pm,
	  scripts/LogWarning.pm, scripts/Registry.pm,
	  scripts/WarningDescription.pm, scripts/sort-warnings.pl:
	  Reindent.

2004-12-11  Adam Heath  <doogie@brainfood.com>

	* include/jsyscall.h:
	  Improving formatting.

2004-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/CardLayout.java,
	libraries/javalib/java/awt/Menu.java,
	libraries/javalib/java/awt/MenuItem.java,
	libraries/javalib/java/awt/Panel.java,
	libraries/javalib/java/awt/Polygon.java,
	libraries/javalib/java/awt/PopupMenu.java,
	libraries/javalib/java/awt/TextArea.java,
	libraries/javalib/java/awt/TextComponent.java,
	libraries/javalib/java/awt/TextField.java,
	libraries/javalib/java/awt/dnd/peer/DropTargetContextPeer.java,
	libraries/javalib/java/awt/im/spi/InputMethodContext.java,
	libraries/javalib/java/awt/image/Raster.java,
	libraries/javalib/javax/swing/AbstractListModel.java,
	libraries/javalib/javax/swing/JPasswordField.java,
	libraries/javalib/javax/swing/JTree.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTextUI.java,
	libraries/javalib/javax/swing/text/PlainDocument.java:
	Resynced with GNU Classpath. White-space diffs.
